# tfg_hardware_accelerator

./: .gitignore  Bitacora.md  README.md
_ide/: .peers.ini  workspace_journal.py  workspace_journal_12940.py  workspace_journal_15320.py  workspace_journal_16580.py  workspace_journal_17000.py  workspace_journal_17504.py  workspace_journal_19824.py  workspace_journal_20924.py  workspace_journal_21528.py  workspace_journal_22228.py  workspace_journal_25496.py  workspace_journal_25772.py  workspace_journal_27908.py  workspace_journal_2844.py  workspace_journal_29632.py  workspace_journal_36016.py  workspace_journal_5708.py
_ide/.wsdata/: .repo.yaml  clang_dir_map.json  version.ini
data/: mnist_preparation.py  mnist_train_data.hpp  noise_train_data.hpp
hls_tfg_bnn/: compile_commands.json  hls_config.cfg  vitis-comp.json
hls_tfg_bnn/.cache/clangd/index/: forward_fw.cpp.811DE38A96B69399.idx  forward_fw.hpp.AD0DE9CC25B898F9.idx  mnist_train_data.hpp.0C7867B153470DCF.idx  (+2 more)
hls_tfg_bnn/train_step/: train_step.hlscompile_summary  train_step.hlsrun_cosim_summary  train_step.hlsrun_csim_summary  train_step.hlsrun_impl_summary  train_step.hlsrun_package_summary
hls_tfg_bnn/train_step/hls/: config.cmdline  hls.aps  hls_data.json
hls_tfg_bnn/train_step/hls/impl/misc/drivers/train_step_v1_0/src/: CMakeLists.txt  xtrain_step.h
hls_tfg_bnn/train_step/reports/: hls_compile.rpt  hls_cosim.rpt  hls_impl_pnr.rpt  hls_impl_syn.rpt  v++_compile_train_step_guidance.html
hls_tfg_bnn/train_step/train_step/: component.xml
src/: forward_fw.cpp  forward_fw.hpp
tb/: train_tb.cpp
(+677 files in other folders)
